--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       src="static/js/controladores/listarProductosSeccionController.js"
     ></script>
     <script defer type="module" src="static/js/modal/modal.js"></script>
-    <title>Alura Geek</title>
+    <title>Alura Geek Challenge</title>
   </head>
   <body>
     <header class="header">
@@ -55,12 +55,12 @@
     </header>
     <section class="banner">
       <div class="banner__datos">
-        <h1 class="banner_titulo">Febrero Promocional</h1>
+        <h1 class="banner_titulo">Agosto Promocional</h1>
         <p class="banner__descripcion">
-          Productos selecionados con 33% de descuento
+          Productos selecionados con 20% de descuento
         </p>
         <button class="btn-banner" onclick="window.location.href='#consolas'">
-          Ver consolas
+          Ver Productos
         </button>
       </div>
     </section>
@@ -73,7 +73,7 @@
               src="../static/assets/logos/Vector.svg"
               alt=""
             />
-            <p>Disculpa las molestias!!</p>
+            <p>Estamos trabajando en ello</p>
           </div>
         </section>
 
@@ -99,7 +99,7 @@
 
       <section class="productos diversos">
         <div class="productos__leyenda">
-          <h1>Diversos</h1>
+          <h1>Random</h1>
           <div class="productos__ver-todo">
             <a href="pages/productos.html">Ver todo</a>
             <img src="static/assets/icons/flecha.svg" alt="" />
@@ -164,10 +164,13 @@
     </footer>
     <div class="footer__creditos">
       <div class="footer__creditos-redes">
-        <a href="https://github.com/ignafemenia">
+        <a href="https://github.com/ignafemenia" target="_blank">
           <img class="redes" src="static/assets/icons/linkedin.svg" alt="" />
         </a>
-        <a href="https://github.com/ignafemenia/Challenge-Alura-3">
+        <a
+          href="https://github.com/ignafemenia/Challenge-Alura-3"
+          target="_blank"
+        >
           <img class="redes" src="static/assets/icons/github.svg" alt="" />
         </a>
       </div>
