--- a/pages/detallesProducto.html
+++ b/pages/detallesProducto.html
@@ -134,7 +134,7 @@
 </footer>
 <div class="footer__creditos">
     <div class="footer__creditos-redes">
-        <a href="https://github.com/ignafemenia">
+        <a href="https://www.linkedin.com/in/ignaciofemenia/"> 
           <img class="redes" src="static/assets/icons/linkedin.svg" alt="" />
         </a>
         <a href="https://github.com/ignafemenia/Challenge-Alura-3">
