--- a/pages/productos.html
+++ b/pages/productos.html
@@ -168,10 +168,12 @@
     </footer>
     <div class="footer__creditos">
       <div class="footer__creditos-redes">
-        <a href="https://www.linkedin.com/in/ignaciofemenia/"
+        <a href="https://www.linkedin.com/in/ignaciofemenia/" target="_blank"
           ><img class="redes" src="../static/assets/icons/linkedin.svg" alt=""
         /></a>
-        <a href="https://github.com/ignafemenia/Challenge-Alura-3"
+        <a
+          href="https://github.com/ignafemenia/Challenge-Alura-3"
+          target="_blank"
           ><img class="redes" src="../static/assets/icons/github.svg" alt=""
         /></a>
       </div>
