--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     </footer>
     <div class="footer__creditos">
       <div class="footer__creditos-redes">
-        <a href="https://github.com/ignafemenia" target="_blank">
+        <a href="https://www.linkedin.com/in/ignaciofemenia/" target="_blank">
           <img class="redes" src="static/assets/icons/linkedin.svg" alt="" />
         </a>
         <a
